css/style.css
/* ... */
 .fp-auto-height.fp-section,
 .fp-auto-height .fp-slide,
 .fp-auto-height .fp-tableCell{
     height: auto !important;
 }
 
 .fp-responsive .fp-auto-height-responsive.fp-section,
 .fp-responsive .fp-auto-height-responsive .fp-slide,
 .fp-responsive .fp-auto-height-responsive .fp-tableCell {
     height: auto !important;
 }

/*Loading Section*/
section#loading {
    height: 100vh;
    width: 100vw;
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    top: 0;
    left: 0;
    bottom: 0;
    right: 0;
    z-index: 101;
    background-color: white;
}
section#loading div.circle {
    background-image: linear-gradient(90deg, #F800FF 0%, #3100FF 100%);
    width: 0vw;
    height: 0vw;
    transition: all .3s ease-in-out;
    -webkit-transition: all .3s ease-in-out;
}
.fullwidth {animation: fullwidth 1.5s;}
@keyframes fullwidth {
    0% {width: 20vw; height: 20vw;}
    10% {width: 100vw; height: 100vh;}
    95% {width: 100vw; height: 100vh;}
    100% {width: 0vw; height: 100vh;}
}
.j2hide {animation: j2hide 1.5s;}
@keyframes j2hide {
    0%, 80% {opacity: 1;}
    90%, 100% {opacity: 0;}
}
.spin {animation: spin 1s;}
@keyframes spin {
    0% {transform: rotate(0deg); border-radius: 0%; width: 20vw; height: 20vw;}
    50% {border-radius: 50%;}
    100% {transform: rotate(360deg); border-radius: 0%; width: 20vw; height: 20vw;}
}
section#loading img {
    width: 10vw;
    position: absolute;
    top: 50%;
    left: 50%;
    transform: translate(-50%, -50%);
}
@media screen and (max-width: 900px) {
    @keyframes fullwidth {
        0% {width: 30vw; height: 30vw;}
        10% {width: 100vw; height: 100vh;}
        95% {width: 100vw; height: 100vh;}
        100% {width: 0vw; height: 100vh;}
    }
    @keyframes spin {
        0% {transform: rotate(0deg); border-radius: 0%; width: 30vw; height: 30vw;}
        50% {border-radius: 50%;}
        100% {transform: rotate(360deg); border-radius: 0%; width: 30vw; height: 30vw;}
    }
    section#loading img {
        width: 15vw;
    }
}

div.section h1 {
    font-size: 4vw;
}

div.section p {
    font-size: 2vw;
}

/*Navigation*/

#circleLeft {
    position: fixed;
    left: -10vw;
    top: 50%;
    transform: translateY(-50%) rotate(0deg);
    background-image: linear-gradient(0deg, #F800FF 0%, #3100FF 100%);
    width: 20vw;
    height: 20vw;
    border-radius: 50%;
    transition: all .5s ease-in-out;
    -webkit-transition: all .5s ease-in-out;
}

#circleRight {
    position: fixed;
    right: -10vw;
    top: 50%;
    transform: translateY(-50%) rotate(0deg);
    background-image: linear-gradient(0deg, #F800FF 0%, #3100FF 100%);
    width: 20vw;
    height: 20vw;
    border-radius: 50%;
    transition: all .5s ease-in-out;
    -webkit-transition: all .3s ease-in-out;
}

#circleBottom {
    position: absolute;
    bottom: -25vw;
    left: 50%;
    transform: translateX(-50%);
    -webkit-transform-style: preserve-3d;
    -webkit-backface-visibility: hidden;
    width: 30vw;
    height: 30vw;
    clip: rect(0vw,30vw,5vw,0vw);
    z-index: 100;
    overflow: hidden;
}

#circleBottomBackground {
    position: relative;
    width: 100%;
    height: 100%;
    display: block;
    -webkit-transform-style: preserve-3d;
    -webkit-backface-visibility: hidden;
    background-image: linear-gradient(90deg, #F800FF 0%, #3100FF 100%);
    border-radius: 50%;
    transition: all .3s ease-in-out;
    -webkit-transition: all .3s ease-in-out;
}

#circleRightLogo {
    position: fixed;
    right: 1vw;
    top: 50%;
    transform: translateY(-50%);
    width: 7vw;
    z-index: 1;
}

#fp-nav ul li a span, .fp-slidesNav ul li a span {
    background: #fff;
}

#fp-nav ul li:nth-child(1) a::after, #fp-nav ul li:nth-child(2) a::after, #fp-nav ul li:nth-child(3) a::after, #fp-nav ul li:nth-child(4) a::after {
    font-family: 'Neutra', sans-serif;
    color: white;
    position: relative;
    left: 25px;
    top: -4px;
    font-size: 22px;
    transition: all .1s ease-in-out;
    -webkit-transition: all .1s ease-in-out;
}
#fp-nav ul li:nth-child(1) a::after {content: "Home";}
#fp-nav ul li:nth-child(2) a::after {content: "About";}
#fp-nav ul li:nth-child(3) a::after {content: "Work";}
#fp-nav ul li:nth-child(4) a::after {content: "Talk";}

div#workSection div#slide1 img {
    width: 20vw;
    display: block;
    margin: 20px auto -30px;
    animation: swipeRotateWork 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) infinite;
}


@keyframes swipeRotateWork {
    0%, 100% {
        transform: translateX(-10px) rotate(-5deg);
    } 50% {
        transform: translateX(10px) rotate(5deg);
    }
}

div#homeSection img {
    width: 20vw;
    display: block;
    margin: 20px auto -30px;
    animation: swipeRotateHome 1s cubic-bezier(0.175, 0.885, 0.32, 1.275) infinite;
}

@keyframes swipeRotateHome {
    0%, 100% {
        transform: translateY(-15px) rotate(105deg);
    } 50% {
        transform: translateY(15px) rotate(120deg);
    }
}

#talkForm {
    max-width: 50vw;
    width: 50vw;
    margin: auto;
}

#talkForm input, textarea, button {
    background-image: linear-gradient(90deg, #F800FF 0%, #3100FF 100%);
    border: none;
    border-radius: 5px;
    min-width: 100%;
    display: block;
    padding: 10px;
    margin: 10px 0px;
    color: white;
    font-family: 'Neutra', sans-serif;
    opacity: 1;
    font-size: 2rem;
    text-align: center;
}
#talkForm textarea {
    height: 20vh;
}
#talkForm button {
    min-width: 50%;
    width: 50%;
    margin: auto;
    font-size: 1.5rem;
}
#talkForm input::placeholder, textarea::placeholder {
    color: white;
    font-family: 'Neutra', sans-serif;
    opacity: 1;
    font-size: 2rem;
    text-align: center;
}
#talkForm input::-webkit-input-placeholder, textarea::-webkit-input-placeholder {
    color: white;
    font-family: 'Neutra', sans-serif;
    opacity: 1;
    font-size: 2rem;
    text-align: center;
}
/* ... */

